# amtp-python-sdk

./: MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
amtp/: __init__.py  agent.py  error.py  message.py  schema.py
examples/: schema_example.py  simple_agent.py  supported_schemas.py
